@@ -262,4 +262,23 @@ GTTLVGREP 800.802.01 -ein test/resources/sig/ok-sig-2014-08-01.1.ksig
 >>>= 0
 
 ###############################################################################
+# Tlvgrep PDU v2 extend response header and payload.
+# BUGFIX: UTLV-43
+
+GTTLVGREP -n 0321.01,02 test/resources/tlv/V2ExtendResponse-oldHmac.tlv
+>>>
+321.01: 0105616e6f6e0002045809ec2d03020133
+321.02: 0108748559a670a87d7d040005094e6f206572726f72001204580a0c92880201f60104580a0c580204580a0c53052101a35a16457ffedb1ac55864a73994f2c04f7d0381d920ab8d67e5b93a7f6bd1a008210160905195ec2898438015dc5663a6c3a03a0714657ffcca9caeae941fa7b878dd082101870f10075fb43b3de772d4eb79255c5080e59b7cd85a0339231be15c3b05f792072101c1067fce67a3d7183b88f34c8e103e453c64cfa0ac1fe0ee546c95a7d3fd0101072101bf3e09532550c66c761642c4bf8eab2463122dfe731decdaacf12fd4f70aeb17082101cad778e2673766ab93460927bb91edcc1bbcf32f0de4bbee567af4b80ef63a460821013b1585610581c00156a71dd5b8f559763bf68c251dc786c1b8b017975b3440a90821017b199bbcf2a73e115b47807ad6a520541646ce68351db5e6c9445181d31ad4f9082101c4c267820aa3002d2ee026c034b2ca04c72a60c7a5181fd51ac9d47fe38e90f608210104669d103457232832d3eb6be33cd59bda6a598225a03f10e802cc578ac93faa0821012d43f902b7231b1d923ec932f01eef2f6fb43a149b334a12fb4a47cc032f31a9082101ebc3ab1d86641581130ac3c7077b71b67bba4c915530e9fe49b98769fc8dcaeb082101496fc0120d854e7534b992ab32ec3045b20d4bee1bfbe4564fd092ceafa08b72082101bb44fd36a5f3cdee7b5c6df3a6098a09e353335b6029f1477502588a7e37be00
+>>>= 0
+
+###############################################################################
+# Tlvgrep PDU v2 extend response header instance identifier.
+# BUGFIX: UTLV-43
+
+GTTLVGREP -n 0321.01.02 test/resources/tlv/V2ExtendResponse-oldHmac.tlv
+>>>
+321.01.02: 5809ec2d
+>>>= 0
+
+###############################################################################
 
