@@ -1,3 +1,4 @@
+* BUGFIX: Grep is grepping invalid content.
 * BUGFIX: Setting gttlvdump stdin mode to binary.
 * IMPROVEMENT: Added -D for specifying description file directory.
 * IMPROVEMENT: Added -o for overriding default description files.
